--- a/_config.yml
+++ b/_config.yml
@@ -542,7 +542,7 @@ theme_config:
 
   # Google Webmaster tools verification.
   # See: https://www.google.com/webmasters
-  google_site_verification:
+  google_site_verification: h7DcI_bwoma2ZBU6PdIKJEx-4ZMWYUQkuq_8IdXYfz4
 
   # Bing Webmaster tools verification.
   # See: https://www.bing.com/webmaster
