--- a/_config.yml
+++ b/_config.yml
@@ -1075,6 +1075,14 @@ theme_config:
   js: js
   images: images
 
+# sitemap
+sitemap:
+  path: sitemap.xml
+  # template: ./sitemap_template.xml
+  rel: false
+  tags: true
+  categories: true
+
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
