--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ name: CI
 # events but only for the master branch
 on:
   push:
-    branches: [ hexo ]
+    branches: [hexo]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -17,37 +17,37 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - name: Checkout
-      uses: actions/checkout@v2
-      with:
-        submodules: true  # Checkout private submodules(themes or something else).
-    # Caching dependencies to speed up workflows. (GitHub will remove any cache entries that have not been accessed in over 7 days.)
-    - name: Cache node modules
-      uses: actions/cache@v2
-      id: cache
-      with:
-        path: ~/.npm
-        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-        restore-keys: |
-          ${{ runner.os }}-node-
-    # Install Dependencies
-    - name: Install Dependencies
-      if: steps.cache.outputs.cache-hit != 'true'
-      run: npm ci
-    # Deploy
-    - name: Deploy
-      id: deploy
-      uses: sma11black/hexo-action@v1.0.2
-      with:
-        user_name: LonelySteve
-        user_email: jianglufull@foxmail.com
-        # The deploy key for Github Pages repo
-        deploy_key: ${{ secrets.DEPLOY_KEY }}
-        # Git commit messages to your GitHub Pages repository.
-        commit_msg: （${{ github.event.head_commit.message }}） 
-    # Use the output from the `deploy` step (use for test action)
-    - name: Get the output
-      run: |
-        echo "${{ steps.deploy.outputs.notify }}" 
-        echo "${{ steps.cache.outputs.notify }}"
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          submodules: true # Checkout private submodules(themes or something else).
+      # Caching dependencies to speed up workflows. (GitHub will remove any cache entries that have not been accessed in over 7 days.)
+      - name: Cache node modules
+        uses: actions/cache@v2
+        id: cache
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+      # Install Dependencies
+      - name: Install Dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: npm ci
+      # Deploy
+      - name: Deploy
+        id: deploy
+        uses: sma11black/hexo-action@v1.0.2
+        with:
+          user_name: LonelySteve
+          user_email: LonelySteve227@outlook.com
+          # The deploy key for Github Pages repo
+          deploy_key: ${{ secrets.DEPLOY_KEY }}
+          # Git commit messages to your GitHub Pages repository.
+          commit_msg: （${{ github.event.head_commit.message }}）
+      # Use the output from the `deploy` step (use for test action)
+      - name: Get the output
+        run: |
+          echo "${{ steps.deploy.outputs.notify }}" 
+          echo "${{ steps.cache.outputs.notify }}"
